--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <img src="https://static-resources.imageservice.cloud/13140053/bits-bytes-hexadecimals-and-ascii.png">
         <p>We had to practice the skill of converting numbers from base-10 to binary because knowing how to do so is a skill required for the AP Computer Science A test. </p>
         <p><a href="https://www.khanacademy.org/math/algebra-home/alg-intro-to-algebra/algebra-alternate-number-bases/v/decimal-to-binary">Here</a> is a video you can use to learn how to convert numbers from base-10 to binary.</p>
-        <h3>Phishing</h3>
-<h2>Phishing</h2>
+
+<h1>Phishing</h1>
 <h3>Overview:</h3>
-<p>Overview: Phishing is a complex cybercrime in which individuals are 
+<p>Phishing is a complex cybercrime in which individuals are 
 targeted through online formats such as email, telephone, or text message. 
 The victims are misled by the con-artists into revealing sensitive information such as 
 credit card numbers, social security numbers, and other personal data. Disclosing such 
