--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <p>By publishing a website through Github, the code for the website is open-source. Anyone can read the code and/or suggest changes. The code for this website is <a href="https://github.com/sethi-sim/sethi-sim.github.io">here.</a></p>
         <h1>Using devtools to inspect a website</h1>
         <p>Go to any website and right-click and click on “inspect element”, this allows you access to all the code that was used when creating the website UI. You are not able to permanently edit it, but you can for only your screen: as shown below. This is one way to view some of the formatting and code of any website even if it’s not open-source.</p>
-        <img src="kgc1" alt="KGC Facebook logo">
+        <img src="kgc1.png" alt="KGC Facebook logo">
         <p>This is the logo and name for the KGC Facebook page (above)</p>
-        <img src="kgc2" alt="how to click inspect on a webiste">
+        <img src="kgc2.png" alt="how to click inspect on a webiste">
         <p>Then by right-clicking on the name of the page-”Khalsa Gurmat Center”- you see “Inspect”. </p>
-        <img src="kgc3" alt="what 'inspect' looks like">
+        <img src="kgc3.png" alt="what 'inspect' looks like">
         <p>On the right, the code for the page comes and the line that is highlighted in blue is what codes what is highlighted on the left, the name of the profile. </p>
         <h1>Cryptology</h1>
         <p>Cryptology is the study and practice of codes or secret messages. Codes have been used for centuries during wars and even to this day amongst everyone. Cryptography is used to secure our texts and emails on a daily basis, our bank accounts-when making transactions- our websites and many other things. Cryptology is used all around us. </p>
@@ -41,13 +41,13 @@
 
 <p>Within a substitution cipher, the key to the message that is being encrypted can be either rotated from the original alphabet, scrambled or mapped. In mapping, a word or phrase is the “key”. It is placed in the front (most times) and the rest of the alphabet that hasn’t already been used proceeds it. </p>
         <p>An example of mapping: </p>
-        <img src="add the image link here">
+        <img src="cipher1.png" alt="substitution cipher example">
         <p>A shown here, the key is “khalsagurmatcenter” as letters are repeated within that phrase, it is removed from the new ‘key’. In the end both the alphabet and the key have the same number of letters each letters being replaced with its corresponding letter in the key. </p>
         <p>If it is a rotation cipher then the letters would just be rotated</p>
-        <img src="add the image link here">
+        <img src="cipher2.png" alt="rotation cipher example alphabet key">
         <p>As shown in this image, the letter where ‘A’ would normally be, is being replaced by ‘D’. The entire alphabet is being shifted over. </p>
         <p>This is another example of a rotation cipher. ROT13 means the alphabet is being shifted 13 letters. The image shows how the original alphabet corresponds with the new key. </p>
-        <img src="add the image link here">
+        <img src="cipher3.png" alt="using rotation cipher example">
         
         <h1>Binary Numbers:</h1>
         <p>Binary numbers are a number system that is used by computers. The binary system is in base-2, which means each digit is represented by a 0 or a 1. Because the binary system is in base-2, the first digit is worth 1 in the decimal number system (or the base-10 number system, the number system we usually use to count), the second digit is worth 2 in the decimal number system, the third digit is worth 4 in the decimal number system, and so on increasing by two times the last digit. </p>
@@ -80,7 +80,7 @@ information often leads to identity theft and/ or significant financial loss. </
 </ul>
 <p>This list was found on How to Recognize and Avoid Phishing Scams. Click <a href="https://www.consumer.ftc.gov/articles/how-recognize-and-avoid-phishing-scams">here</a> for more information</p>
 <p>Keep in mind that these messages often look very realistic so you often have to look very closely to spot any inconsistencies. Here is an example of a phishing scam:</p>
-<img src="phishing1" alt="exmaple of phishing scenario">
+<img src="phishing1.jpg" alt="exmaple of phishing scenario">
 
 <h2>End to End Encryption</h2>
 <p>End to end encryption is a security measure that ensures your messages are secure. 
@@ -94,8 +94,8 @@ where they might be decoded. WhatsApp is end to end encrypted while Zoom is not.
 encrypted, it is not end to end encrypted.
 </p>
 
-<img src="encryption1" alt="WhatsApp is end-to-end encrypted">
-<img src="encryption2" alt="Zoom is encrypted but not end-to-end encrypted">
+<img src="encryption1.jpg" alt="WhatsApp is end-to-end encrypted">
+<img src="encryption2.jpg" alt="Zoom is encrypted but not end-to-end encrypted">
 <h2>Earn it Act</h2>
 <h3>What is the Earn it Act?</h3>
 <p>The Earn It Act is a bill that was proposed to the Senate in 2020 
@@ -125,7 +125,7 @@ to monitor us through our messages rather than to stop child pornography. </p>
 child pornography on big, largely public platfroms. There is nothing stopping criminals from creating their own platforms or
 using bigger platforms with slight modifications that would allow them to continue as they have. If they have enough of a motive, 
 they would not be put off in the slightest by this bill. Therefore, this bill really doesn’t do much other than impede our privacy rights.</p>
-<img src="encryption3" alt="Lisa Simpson meme">
+<img src="encryption3.jpg" alt="Lisa Simpson meme">
 <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/petition/dont-let-congress-kill-encryption?format=js&source=widget&referrer=[object Object]'></script><div id='can-petition-area-dont-let-congress-kill-encryption' style='width: 100%'><!-- this div is the target for our HTML insertion --></div>
 
     </body>
