--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ information often leads to identity theft and/ or significant financial loss. </
 <p>Keep in mind that these messages often look very realistic so you often have to look very closely to spot any inconsistencies. Here is an example of a phishing scam:</p>
 <img src="phishing1.jpg" alt="exmaple of phishing scenario">
 
-<h2>End to End Encryption</h2>
+<h1>End to End Encryption</h1>
 <p>End to end encryption is a security measure that ensures your messages are secure. 
 Not all platforms are end to end encrypted which means someone else (usually the company 
 of the platform) could access your messages from another device without your permission. 
@@ -94,9 +94,9 @@ where they might be decoded. WhatsApp is end to end encrypted while Zoom is not.
 encrypted, it is not end to end encrypted.
 </p>
 
-<img src="encryption1.jpg" alt="WhatsApp is end-to-end encrypted">
+<img src="encyption1.jpg" alt="WhatsApp is end-to-end encrypted">
 <img src="encryption2.jpg" alt="Zoom is encrypted but not end-to-end encrypted">
-<h2>Earn it Act</h2>
+<h1>Earn it Act</h1>
 <h3>What is the Earn it Act?</h3>
 <p>The Earn It Act is a bill that was proposed to the Senate in 2020 
 that would allow law enforcement a backdoor into private, encrypted messages. As stated by ACLU,
