--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>This page includes some of the things we explored after May. Before May we practiced AP Java questions in preparation for the AP test.</p>
         <h1> How to make a website on Github: </h1>
         <p>As we learned more about HTML/CSS/Javascript (all languages used in making websites), we were introduced to how to publish our own website.</p>
-        <p>We used the platform <a href="https://github.com">github.com</a>. This site is just one of many other platforms where coders can publish their work. </p>
+        <p>We used the platform <a href="https://github.com">github.com.</a>This site is just one of many other platforms where coders can publish their work. </p>
         <details>
             <summary>How to publish website:</summary>
             <ol>
@@ -26,7 +26,7 @@
         <p>By publishing a website through Github, the code for the website is open-source. Anyone can read the code and/or suggest changes. The code for this website is <a href="https://github.com/sethi-sim/sethi-sim.github.io">here.</a></p>
         <h1>Using devtools to inspect a website</h1>
         <p>Go to any website and right-click and click on “inspect element”, this allows you access to all the code that was used when creating the website UI. You are not able to permanently edit it, but you can for only your screen: as shown below. This is one way to view some of the formatting and code of any website even if it’s not open-source.</p>
-        <img src="kgc1.png" alt="KGC Facebook logo">
+        <img id="logo" src="kgc1.png" alt="KGC Facebook logo">
         <p>This is the logo and name for the KGC Facebook page (above)</p>
         <img src="kgc2.png" alt="how to click inspect on a webiste">
         <p>Then by right-clicking on the name of the page-”Khalsa Gurmat Center”- you see “Inspect”. </p>
@@ -90,12 +90,12 @@ They have the ability to decode any messages you might send to a person without 
 device. On platforms that do use end to end encryption, no one has the ability to decode or 
 view your messages. Try as they might, they simply don’t have access because your messages are
 encrypted from one device all the way to the other. There is no stopping point along the way 
-where they might be decoded. WhatsApp is end to end encrypted while Zoom is not. While Zoom is 
-encrypted, it is not end to end encrypted.
+where they might be decoded. WhatsApp is end to end encrypted, and Zoom after receiving a lot
+of criticism, has begun to modify its security to support end to end encryption.
 </p>
 
 <img src="encyption1.jpg" alt="WhatsApp is end-to-end encrypted">
-<img src="encryption2.jpg" alt="Zoom is encrypted but not end-to-end encrypted">
+
 <h1>Earn it Act</h1>
 <h3>What is the Earn it Act?</h3>
 <p>The Earn It Act is a bill that was proposed to the Senate in 2020 
