--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KGC computing learnings</title>
+        <title>KGC Computing Learnings</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"></link>
         <link rel="stylesheet" href="style.css"></link>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <h1 id="title">KGC Advanced Computer Class 2020</h1>
         <p>This page includes some of the things we explored after May. Before May we practiced AP Java questions in preparation for the AP test.</p>
         <h1> How to make a website on Github: </h1>
         <p>As we learned more about HTML/CSS/Javascript (all languages used in making websites), we were introduced to how to publish our own website.</p>
@@ -128,5 +129,8 @@ they would not be put off in the slightest by this bill. Therefore, this bill re
 <img src="encryption3.jpg" alt="Lisa Simpson meme">
 <link href='https://actionnetwork.org/css/style-embed-v3.css' rel='stylesheet' type='text/css' /><script src='https://actionnetwork.org/widgets/v3/petition/dont-let-congress-kill-encryption?format=js&source=widget&referrer=[object Object]'></script><div id='can-petition-area-dont-let-congress-kill-encryption' style='width: 100%'><!-- this div is the target for our HTML insertion --></div>
 
+        <script language="javascript">
+			alert("Before you view our page, we would like to thank a special few, so to Stephanie and Karan, here is a sincere thank you!")
+		</script>
     </body>
 </html>
